got intermediate caching to work

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -65,6 +65,18 @@ Now let's add a script to generate a plot!
 
 Perfect we have a figure that will build automatically with changes to source files/etc!
 
+Now let's add a figure from script-generated dynamic dataset!
+
+\begin{figure}
+    \script{plot_random_numbers.py}
+    \begin{centering}
+        \includegraphics[width=0.5\textwidth]{figures/random_numbers.pdf}
+        \caption{Plot random numbers.}
+        \label{fig:rand}
+    \end{centering}
+\end{figure}
+
+
 \bibliography{bib}
 
 \end{document}
