--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -10,6 +10,8 @@
 
 % Author list
 \author{Bruce Edelman}
+\email{bedelman@uoregon.edu}
+\affiliation{Institute  for  Fundamental  Science, Department of Physics, University of Oregon, Eugene, OR 97403, USA}
 
 % Abstract with filler text
 \begin{abstract}
